Implement login page

--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -1,4 +1,10 @@
-<div id = "login-page">
-  Login:
-  Password:
+<div id = "login-page" class="login-page">
+  <div class="field">
+    Login:
+    <input type="text">
+  </div>
+  <div class="field">
+    Password:
+    <input type="password">
+  </div>
 </div>
