--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -1,10 +1,15 @@
 <div id = "login-page" class="login-page">
   <div class="field">
     Login:
-    <input type="text">
+    <input type="text" id="login-input">
   </div>
   <div class="field">
     Password:
-    <input type="password">
+    <input type="password" id="password-input">
+  </div>
+  <div class="field">
+    <button id="login-button" class="button">
+      Login
+    </button>
   </div>
 </div>
