--- a/src/components/messenger/messenger.html
+++ b/src/components/messenger/messenger.html
@@ -1,1 +1,10 @@
-Teest1236
+<div class="messenger-page">
+  <div class="messages-container" id="messages-container">
+  </div>
+  <div class="message-bar">
+    <input type="text" id="message-input">
+    <button id="send-button">
+      Send
+    </button>
+  </div>
+</div>
