--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@ $padding-md: 10px;
 $padding-lg: 20px;
 
 $margin-sm: 4px;
+$margin-md: 10px;
 
 body {
   margin: 0;
@@ -78,6 +79,65 @@ body {
           transition: 0.5s;
           border: 2px solid white;
         }
+      }
+    }
+  }
+  .messenger-page {
+    width: 100%;
+    height: calc(100vh - 60px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    .messages-container {
+      background: $color-light-grey;
+      display: flex;
+      width: 100%;
+      height: 100%;
+      flex-direction: column;
+      padding: $padding-md;
+      box-sizing: border-box;
+      overflow-y: scroll;
+    }
+
+    .message-bar{
+      display: flex;
+      width: 100%;
+      align-self: flex-end;
+      padding: $padding-md;
+      background: $color-yellow;
+      box-sizing: border-box;
+
+      input {
+        width: 100%;
+        padding: 2px;
+        font-size: 16px;
+        text-align: right;
+      }
+
+      button {
+        border: 2px solid $color-grey;
+        background: white;
+        padding: $padding-sm $padding-md;
+        cursor: pointer;
+        transition: 0.5s;
+        margin-left: $margin-md;
+      }
+    }
+
+    .message {
+      background: $color-dark-blue;
+      display: inline-block;
+      padding: $padding-sm $padding-md;
+      max-width: 200px;
+      min-width: 150px;
+      margin: $margin-sm 0px;
+      border-radius: 8px;
+
+      &.message-yours {
+        align-self: flex-end;
+        text-align: right;
       }
     }
   }
