Implement friends list

--- a/src/components/messenger/messenger.html
+++ b/src/components/messenger/messenger.html
@@ -1,5 +1,7 @@
 <div class="messenger-page">
-  <div class="messages-container" id="messages-container">
+  <div class="messenger-container">
+    <div class="friends-container" id="friends-container"></div>
+    <div class="messages" id="messages"></div>
   </div>
   <div class="message-bar">
     <input type="text" id="message-input">
