--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,14 @@ body {
   color: $color-yellow;
 }
 
+.page-wrapper {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
 .page-header {
   display: flex;
   justify-content: flex-end;
@@ -83,6 +91,7 @@ body {
     }
   }
   .messenger-page {
+    max-width: 1200px;
     width: 100%;
     height: calc(100vh - 60px);
     display: flex;
@@ -90,15 +99,75 @@ body {
     justify-content: center;
     flex-direction: column;
 
-    .messages-container {
-      background: $color-light-grey;
-      display: flex;
+    .messenger-container{
+      flex-direction: row;
       width: 100%;
       height: 100%;
-      flex-direction: column;
-      padding: $padding-md;
-      box-sizing: border-box;
-      overflow-y: scroll;
+      flex-wrap: nowrap;
+      display: flex;
+
+      .messages {
+        background: #b5b5b7;
+        display: flex;
+        flex: 1;
+        height: 100%;
+        flex-direction: column;
+        padding: 10px;
+        box-sizing: border-box;
+        overflow-y: scroll;
+
+        .message {
+          background: $color-dark-blue;
+          display: inline-block;
+          padding: $padding-sm $padding-md;
+          max-width: 200px;
+          min-width: 150px;
+          margin: $margin-sm 0px;
+          border-radius: 8px;
+    
+          &.message-yours {
+            align-self: flex-end;
+            text-align: right;
+          }
+        }
+      }
+  
+      .friends-container { 
+        height: 100%;
+        background: $color-dark-blue;
+        max-width: 300px;
+        flex: 1;
+
+        .friend {
+          width: 100%;
+          height: 70px;
+          color: white;
+          padding: 10px;
+          display: flex;
+          flex-direction: row;
+          box-sizing: border-box;
+          border-bottom: 5px solid #677077;
+          cursor: pointer;
+
+          .friend-initials {
+            border-radius: 50%;
+            height: 40px;
+            width: 40px;
+            background: white;
+            text-align: center;
+            color: darkblue;
+            padding-top: 11px;
+            box-sizing: border-box;
+            font-weight: bold;
+          }
+
+          .friend-name {
+            margin-left: $margin-md;
+            display: flex;
+            align-items: center;
+          }
+        }
+      }
     }
 
     .message-bar{
@@ -123,21 +192,6 @@ body {
         cursor: pointer;
         transition: 0.5s;
         margin-left: $margin-md;
-      }
-    }
-
-    .message {
-      background: $color-dark-blue;
-      display: inline-block;
-      padding: $padding-sm $padding-md;
-      max-width: 200px;
-      min-width: 150px;
-      margin: $margin-sm 0px;
-      border-radius: 8px;
-
-      &.message-yours {
-        align-self: flex-end;
-        text-align: right;
       }
     }
   }
