Implement different conversations and refactor messanger component

--- a/src/components/messenger/messenger.html
+++ b/src/components/messenger/messenger.html
@@ -1,4 +1,4 @@
-<div class="messenger-page">
+<div class="messenger-page" id="messenger-page">
   <div class="messenger-container">
     <div class="friends-container" id="friends-container"></div>
     <div class="messages" id="messages"></div>
@@ -8,5 +8,5 @@
     <button id="send-button">
       Send
     </button>
-  </div>
+  </div>      
 </div>
