Display date on messages

--- a/src/index.scss
+++ b/src/index.scss
@@ -129,6 +129,12 @@ body {
             align-self: flex-end;
             text-align: right;
           }
+
+          .date { 
+            font-size: 11px;
+            text-align: right;
+            color: white;
+          }
         }
       }
   
